--- a/block-sdk/integrate.mdx
+++ b/block-sdk/integrate.mdx
@@ -2,7 +2,7 @@
 title: "Integrate the Block SDK"
 ---
 <Info>
-Block SDK
+**Block SDK**
 
 The Block SDK is **open-source software** licensed under MIT. It is free to use, and has existing plug-and-play Lanes that work immediately!
 
