--- a/slinky/incentivize-slashing.mdx
+++ b/slinky/incentivize-slashing.mdx
@@ -1,5 +1,5 @@
 ---
-title: "⚖️ Incentivization & Slashing"
+title: "Incentivization & Slashing"
 ---
 ## 🤝 Validators and Slinky[​](#-validators-and-slinky "Direct link to heading")
 
