Update for skip

--- a/api-reference/getting-started.mdx
+++ b/api-reference/getting-started.mdx
@@ -3,7 +3,9 @@ title: "Getting Started"
 description: "This page will help you get started with Skip API."
 ---
 
+<Frame>
 ![](/images/1.png) 
+</Frame>
 
 ## 👋 Introduction
 
