--- a/home.mdx
+++ b/home.mdx
@@ -1,14 +1,19 @@
 ---
-title: "Welcome to Skip"
+title: 'Welcome to Skip'
 mode: wide
-description: "Choose your product to get started"
+description: 'Choose your product to get started'
 ---
 
-<CardGroup cols={3}>
-  <Card title="REST API" icon="square-terminal" iconType="duotone" href="api-reference">
-  </Card>
-  <Card title="Block SDK" icon="code" iconType="duotone" href="block-sdk">
-  </Card>
-  <Card title="Slinky" icon="wand-magic-sparkles" iconType="duotone" href="slinky">
-  </Card>
-</CardGroup>
+<Card
+  title="REST API"
+  icon="square-terminal"
+  iconType="duotone"
+  href="api-reference"
+></Card>
+<Card title="Block SDK" icon="code" iconType="duotone" href="block-sdk"></Card>
+<Card
+  title="Slinky"
+  icon="wand-magic-sparkles"
+  iconType="duotone"
+  href="slinky"
+></Card>
